--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,7 @@ body {
 .app:before {
   content: "";
   background: url(./Images/default.jpg) no-repeat center center/cover;
+  background-attachment: fixed;
   position: absolute;
   width: 100%;
   height: 100vh;
@@ -32,6 +33,7 @@ body {
 
 .appMist:before {
   background: url(./Images/mist.jpg) no-repeat center center/cover;
+  background-attachment: fixed;
   content: "";
   position: absolute;
   width: 100%;
@@ -43,6 +45,7 @@ body {
 }
 .appClouds:before {
   background: url(./Images/clouds.jpg) no-repeat center center/cover;
+  background-attachment: fixed;
   content: "";
   position: absolute;
   width: 100%;
@@ -54,6 +57,7 @@ body {
 }
 .appClear:before {
   background: url(./Images/clear.jpg) no-repeat center center/cover;
+  background-attachment: fixed;
   content: "";
   position: absolute;
   width: 100%;
@@ -65,6 +69,7 @@ body {
 }
 .appThunderstorm:before {
   background: url(./Images/thunder.jpg) no-repeat center center/cover;
+  background-attachment: fixed;
   content: "";
   position: absolute;
   width: 100%;
@@ -76,6 +81,7 @@ body {
 }
 .appDrizzle:before {
   background: url(./Images/drizzle_rain.jpg) no-repeat center center/cover;
+  background-attachment: fixed;
   content: "";
   position: absolute;
   width: 100%;
@@ -87,6 +93,7 @@ body {
 }
 .appRain:before {
   background: url(./Images/rain.jpg) no-repeat center center/cover;
+  background-attachment: fixed;
   content: "";
   position: absolute;
   width: 100%;
@@ -98,6 +105,7 @@ body {
 }
 .appSnow:before {
   background: url(./Images/snow.jpg) no-repeat center center/cover;
+  background-attachment: fixed;
   content: "";
   position: absolute;
   width: 100%;
@@ -109,6 +117,7 @@ body {
 }
 .appTornado:before {
   background: url(./Images/tornado.jpg) no-repeat center center/cover;
+  background-attachment: fixed;
   content: "";
   position: absolute;
   width: 100%;
@@ -121,6 +130,7 @@ body {
 
 .appHaze:before {
   background: url(./Images/mist.jpg) no-repeat center center/cover;
+  background-attachment: fixed;
   content: "";
   position: absolute;
   width: 100%;
@@ -156,8 +166,9 @@ h1 {
   font-size: 6rem;
 }
 .container {
+  /* background-color: red; */
   max-width: 700px;
-  height: 700px;
+  height: 89vh;
   margin: auto;
   padding: 0 1rem;
   position: relative;
@@ -181,7 +192,7 @@ h1 {
 
 .App .bottom {
   position: relative;
-  top: -17%;
+  top: -6%;
   display: flex;
   justify-content: space-evenly;
   text-align: center;
@@ -193,4 +204,24 @@ h1 {
 }
 button {
   display: none;
+}
+
+@media only screen and (max-width: 1024px) {
+  .container {
+    width: 100%;
+    height: 86.5vh;
+  }
+  .App .bottom {
+    top: -5%;
+  }
+}
+@media only screen and (max-width: 768px) {
+  p {
+    font-size: 1.2rem;
+  }
+}
+@media only screen and (min-width: 768px) {
+  p {
+    font-size: 1.6rem;
+  }
 }
